test/yaml/testdata/output/standard/exact-path.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: api.example.com
    name: api-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-exact-api-example-com
  namespace: namespace1
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: users-service
      port: 8080
    matches:
    - path:
        type: Exact
        value: /api/v1/users
    name: rule-0-exact-api-v1-users
status:
  parents: []
