test/yaml/testdata/output/standard/host.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: sample.com
    name: sample-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress1-sample-com
  namespace: namespace1
spec:
  hostnames:
  - sample.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /path-ingress1
    name: rule-0-prefix-path-ingress1
status:
  parents: []
