test/yaml/testdata/output/standard/multiple-paths.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: app.example.com
    name: app-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-multi-app-example-com
  namespace: namespace1
spec:
  hostnames:
  - app.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: api-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
    name: rule-0-prefix-api
  - backendRefs:
    - name: web-service
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /web
    name: rule-1-prefix-web
  - backendRefs:
    - name: admin-service
      port: 9000
    matches:
    - path:
        type: Exact
        value: /admin
    name: rule-2-exact-admin
status:
  parents: []
